tying to fix jumping logorain footer, and index cont overflow

--- a/mobilestylesheet.css
+++ b/mobilestylesheet.css
@@ -453,7 +453,7 @@ h2{
     margin-bottom:20px;
 }
 
-.logorain{
+.logorain, .index{
     overflow:hidden;
 }
 #world{
@@ -699,7 +699,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(246,211,13,1) 88
     width:100%;
     height:5vh;
     background-color:#fffdf0;
-    z-index: 100;
+    z-index: 1000;
 }
 .paintingfooter{
     bottom:0;
