--- a/stylesheet.css
+++ b/stylesheet.css
@@ -403,7 +403,7 @@ h2{
   clear: both;
 }
 
-.logorain{
+.logorain, .index{
     overflow:hidden;
 }
 #world{
@@ -702,7 +702,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(246,211,13,1) 88
     width:100%;
     height:5vh;
     background-color:#fffdf0;
-    z-index: 100;
+    z-index: 1000;
 }
 .paintingfooter{
     position: absolute;
